0.9.7b Main Cinematic Intro fleshed out! Massive extension of scripting functionality. In particular: - GridViewAnimator - GridObject control functions - FullscreenAnims control functions - Generic sprite/actor animations via GraphicData
Misc
- SOUND_CUE enumeration now preloaded and fully used
- Highlight speaker func prototyped
- Smarter fullscreen particles